Fixed overflowing images on content pages

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11734,6 +11734,10 @@ ul.pager {
 .padding-left-0 {
   padding-left: 0;
 }
+.content-type-content-wrapper img {
+  max-width: 100%;
+  height: auto !important;
+}
 @media (max-width: 768px) {
   #shipbox input,
   #shipbox select {
