--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2535,6 +2535,11 @@ ul.pager {
     padding-left: 0;
 }
 
+.content-type-content-wrapper img {
+    max-width: 100%;
+    height: auto !important;
+}
+
 @media (max-width: 768px) {
     #shipbox input, #shipbox select {
         margin-bottom: 6px;
